feat: prepare backend for ops and news
